fix some sat warnings
Signed-off-by: Leo Siepel <leosiepel@gmail.com>